--- a/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-thunder.less
@@ -27,6 +27,15 @@
     .logo{
       background: @--logo-bg-color;
     }
+    .el-breadcrumb__inner{
+      color: @--sideMenu-header-color;
+      .no-redirect{
+        color: @--topMenu-header-color;
+      }
+      a{
+        color: @--sideMenu-header-color;
+      }
+    }
   }
   .top-header{
     color: @--topMenu-header-color;
@@ -55,6 +64,9 @@
       box-shadow:none;
       background:transparent;
       .title{
+        color: @--text-color;
+      }
+      .hamburger-div{
         color: @--text-color;
       }
     }
