--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -23,6 +23,7 @@
   @--app-main-bg-color:#F6F8FA;
   @--layout-bg-color:#F6F8FA;
   @--user-wrapper-color: #a2a2a2;
+  @--border-color:#ebebeb;
   .header{
     color: @--sideMenu-header-color;
     background-color: @--sideMenu-header-bg-color;
@@ -52,6 +53,9 @@
       }
     }
     .el-breadcrumb__inner{
+      .no-redirect{
+        color: @--sideMenu-header-color;
+      }
       a {
         color: @--user-wrapper-color;
       }
@@ -89,9 +93,6 @@
   }
   .side-menu{
     background: @--main-bg-color;
-    .side-menu-header-center{
-      justify-content: flex-start !important;
-    }
   }
   .side-scrollbar{
     background: @--main-bg-color;
@@ -99,6 +100,9 @@
       box-shadow:none;
       background:transparent;
       .title{
+        color: @--text-color;
+      }
+      .hamburger-div{
         color: @--text-color;
       }
     }
@@ -167,8 +171,9 @@
     }
   }
   .contextmenu {
-    background: @--text-color;
+    background: @--main-bg-color;
     color: @--sideMenu-header-color;
+    border:1px solid @--border-color;
     box-shadow: 2px 2px 3px 0 @--header-shadow-color;
     li {
       &:hover {
