--- a/src/packages/xxWeb-box/assets/css/theme/theme-vue-admin.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-vue-admin.less
@@ -26,6 +26,14 @@
     .logo{
       background: @--logo-bg-color;
     }
+    .el-breadcrumb__inner{
+      .no-redirect{
+        color: @--topMenu-header-color;
+      }
+      a{
+        color: @--sideMenu-header-color;
+      }
+    }
   }
   .top-header{
     color: @--topMenu-header-color;
@@ -54,6 +62,9 @@
       box-shadow:none;
       background:transparent;
       .title{
+        color: @--text-color;
+      }
+      .hamburger-div{
         color: @--text-color;
       }
     }
