--- a/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-nitro.less
@@ -135,6 +135,13 @@
     .dynamic-menu.is-Collapse{
       margin: 0;
     }
+    .side-menu-header {
+      box-shadow: 0 0 0 #00000033;
+      background: transparent;
+      .title{
+        color: @--text-color;
+      }
+    }
   }
   .title{
     color: @--text-color;
