--- a/src/packages/xxWeb-box/assets/css/theme/theme-v2board.less
+++ b/src/packages/xxWeb-box/assets/css/theme/theme-v2board.less
@@ -114,6 +114,9 @@
       border-radius: 5px;
     }
   }
+  .dynamic-menu.is-Collapse{
+    padding: 20px 0;
+  }
   .title{
     color: @--text-color;
   }
