--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -4,6 +4,7 @@
 @import "theme/theme-v2board";
 @import "theme/theme-thunder";
 @import "theme/theme-nitro";
+@import "theme/theme-wdp";
 html,body{
   width: 100%;
   height: 100%;
