--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -43,6 +43,9 @@
     height: 100%;
     position: relative;
   }
+  .mtScale-content{
+    display: inline-block;
+  }
   .mtScale-has-ruler{
     width: calc(100% - 20px);
     height: calc(100% - 20px);
