--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -53,6 +53,7 @@
     margin-top: 20px;
   }
   .mtScale-control{
+    box-sizing: border-box;
     padding: 0 10px;
     height: 30px;
     line-height: 30px;
