--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -33,7 +33,7 @@
     user-select: none;
   }
   .mtScale-view{
-    transition: all ease 0.3s;
+    transition: transform ease 0.3s;
   }
   .mtScale-container{
     background-repeat: repeat repeat;
