--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -122,6 +122,25 @@
   .ruler-line{
     width: 1px;
     height: 100%;
+    margin-right: 1px;
+    background-color: var(--line-bg)
+  }
+  .ruler-item-y{
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    cursor: ns-resize;
+  }
+  .ruler-text-y{
+    color: var(--ruler-color);
+    text-indent: 4px;
+    position: absolute;
+    user-select:none;
+  }
+  .ruler-line-y{
+    width: 100%;
+    height: 1px;
+    margin-bottom: 1px;
     background-color: var(--line-bg)
   }
   .control-icon{
