--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -7,6 +7,8 @@
   --ruler-color:#409EFF;
   --line-bg:#409EFF;
   --tool-icon:#909399;
+  --ruler-scale-text:#000;
+  --ruler-scale-bg:#fff;
 }
 .mtScale[theme='dark']{
   --background-color:#202835;
@@ -17,6 +19,8 @@
   --ruler-color:#009dff;
   --line-bg:#009dff;
   --tool-icon:#99a5be;
+  --ruler-scale-text:#96A2BA;
+  --ruler-scale-bg:#1E2532;
 }
 
 .mtScale{
@@ -113,7 +117,7 @@
     margin-left: 8px;
     margin-right: 8px;
   }
-  .dark-bg{
+  .default-bg{
     background-color: var(--background-color);
   }
   .photoshop-bg{
