--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -126,10 +126,10 @@
   .photoshop-bg{
     background-image: url("../img/scaleBg.png");
   }
-  .rCS1g1q24i .scena-guides-guide {
+  .scena-guides-guide {
     background: #0686D7 !important;
   }
-  .rCS1g1q24i .scena-guides-display-drag {
+  .scena-guides-display-drag {
     color: #0686D7 !important;
   }
 }
