--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -30,8 +30,10 @@
 .mtScale{
   position: relative;
   overflow: hidden;
+  height: 100%;
+  width: 100%;
   flex: 1;
-  display: inline-flex;
+  display: flex;
   flex-flow: column;
   justify-content: flex-start;
   background-color: var(--rule-other-bg);
