--- a/src/packages/xxWeb-box/assets/css/login/wdp-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/wdp-login.less
@@ -30,17 +30,16 @@ html,body{
 
     .container {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       a {
         text-decoration: none;
       }
       .left {
         box-sizing: border-box;
-        height: 100vh;
+        height: 100%;
         padding: 40px;
         position: relative;
         background: #2D3A4B url('../../imgs/login3/bg1.png') no-repeat center center;
-        background-repeat: no-repeat;
         background-size: cover;
         overflow: hidden;
         .bg-header {
@@ -52,6 +51,7 @@ html,body{
           align-items: center;
           .logo {
             width: 40px;
+            height: unset;
           }
           .title {
             font-size: 20px;
@@ -68,8 +68,9 @@ html,body{
       }
 
       .main {
+        overflow: auto;
         box-sizing: border-box;
-        height: 100vh;
+        height: 100%;
         padding: 80px;
         text-align:left;
         .el-form-item{
@@ -142,10 +143,10 @@ html,body{
       }
     }
     .footer {
-      bottom: 0;
       width: 100%;
       text-align: center;
       position: absolute;
+      bottom: 0;
       background: transparent;
       border-top:none;
       .links {
