--- a/src/packages/xxWeb-box/assets/css/login/wdp-login.less
+++ b/src/packages/xxWeb-box/assets/css/login/wdp-login.less
@@ -164,6 +164,8 @@ html,body{
         color: rgba(255, 255, 255, 0.85);
         font-size: 14px;
         margin-bottom: 8px;
+        text-align: left;
+        text-indent: 20px;
         a{
           color: #fff;
           text-decoration: none;
