用户名限制长度

--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -119,6 +119,17 @@ html,body{
       .user-wrapper-username{
         margin-left: 12px;
       }
+      .flex-middle{
+        display: flex;
+        vertical-align: middle;
+      }
+      .side-user-userName{
+        display:inline-block;
+        width: 70px;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap
+      }
       .avatar-img{
         background-color: #fff
       }
