用户名限制长度

--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -125,7 +125,7 @@ html,body{
       }
       .side-user-userName{
         display:inline-block;
-        width: 70px;
+        max-width: 70px;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap
