--- a/src/packages/xxWeb-box/components/editor/assets/css/XscGridLayout.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/XscGridLayout.less
@@ -6,12 +6,13 @@
     flex-flow: row;
     align-items: flex-start;
     justify-content: flex-start;
+    flex-wrap: wrap;
   }
   .xsc-col{
     display: inline-block;
     cursor: grab;
     position: relative;
-    margin:0 var(--gutter) ;
+    margin:var(--gutter);
   }
   .ghost {
     border-width:var(--border-width);
