--- a/src/packages/xxWeb-box/components/editor/assets/css/XscGridLayout.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/XscGridLayout.less
@@ -8,11 +8,13 @@
     justify-content: flex-start;
     flex-wrap: wrap;
   }
-  .xsc-col{
+  .xsc-item{
     display: inline-block;
     cursor: grab;
     position: relative;
     margin:var(--gutter);
+    width: 200px;
+    height: 200px;
   }
   .ghost {
     border-width:var(--border-width);
