--- a/src/packages/xxWeb-box/components/editor/assets/css/XscStaticLayout.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/XscStaticLayout.less
@@ -33,6 +33,11 @@
     border: 1px dashed #2d8cf0;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
   }
+  .mt_item_light {
+    box-sizing: content-box;
+    border: var(--border);
+    box-shadow:  var(--box-shadow);
+  }
 
   .item_resize {
     position: absolute;
