--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -100,4 +100,26 @@
       cursor: pointer;
     }
   }
+  .icon-drop{
+    line-height: 22px;
+    padding:2px;
+    min-width: 28px;
+    text-align: center;
+    box-sizing: border-box;
+    border: 1px solid #e6e6e6;
+    border-radius: 4px;
+  }
+  .data-components {
+    width: 100%;
+    height: 100%;
+    .none-label .el-form-item__content {
+      margin-left: 0;
+    }
+    .el-input--small .el-input__inner {
+      height: 26px;
+      line-height: 26px;
+    }
+  }
+
+
 }
