--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -9,6 +9,33 @@
     white-space: nowrap;
     overflow: hidden;
   }
+  /deep/.el-tabs {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+  }
+
+  /deep/ .el-tabs__item.is-active {
+    color: #4634EE;
+  }
+
+  /deep/.el-tabs__active-bar {
+    background: linear-gradient(90deg, #6D5EFF, #918EFF);
+    height: 3px;
+  }
+
+  /deep/.el-tabs__header {
+    border-bottom: none !important;
+    padding: 0 25px;
+    margin: 0;
+    // height: 80px;
+  }
+
+  /deep/.el-tabs__nav-wrap::after {
+    background-color: unset;
+  }
   .el-form-item__label{
     font-size: 12px;
     line-height: 30px;
@@ -110,6 +137,7 @@
     border-radius: 4px;
   }
   .data-components {
+    padding: 10px;
     width: 100%;
     height: 100%;
     .none-label .el-form-item__content {
