--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -1,6 +1,34 @@
 .mt-pro-panel{
   width: 100%;
   height: 100%;
+  .empty_number {
+    display: flex;
+    margin-right: 10px;
+    .empty_number_name {
+      width: 15px;
+      color: #888888;
+    }
+    input {
+      height: 18px;
+      width: 60px;
+      border: none;
+      border-bottom: 1px solid #535353;
+      border-radius: 0;
+      padding: 0;
+    }
+  }
+  .div-control {
+
+  }
+  .flex-center {
+    display: flex;
+    align-items: center;
+  }
+  .left-width {
+    background-color: #4634EE;
+    width: 50px;
+    height: 100%;
+  }
   .panel-title{
     width: 70px;
     margin-right: 10px;
