--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -25,9 +25,10 @@
     align-items: center;
   }
   .left-width {
-    background-color: #4634EE;
+    align-items: center;
     width: 50px;
-    height: 100%;
+    display: flex;
+    justify-content: center;
   }
   .panel-title{
     width: 70px;
@@ -163,6 +164,10 @@
     box-sizing: border-box;
     border: 1px solid #e6e6e6;
     border-radius: 4px;
+  }
+  .mt-pro-div {
+    margin-top: 10px;
+    padding: 0px 10px;
   }
   .mt-pro-collapse {
     .el-collapse-item__content {
