【面板】 + 开关浮动折叠

--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -170,6 +170,15 @@
     padding: 0px 10px;
   }
   .mt-pro-collapse {
+    position: relative;
+    .mt-pro-collapse-stick {
+      position: absolute;
+      right: 15px;
+      top: 14px;
+    }
+    .el-collapse-item__header {
+      display: -webkit-box;
+    }
     .el-collapse-item__content {
       padding: 0px 10px;
     }
