【面板】 + 开关样式

--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -17,6 +17,22 @@
       padding: 0;
     }
   }
+  .mt-boolean-inactive {
+    .el-switch__core::after {
+      background: #EBEBEB;
+    }
+  }
+  .mt-boolean-active {
+    .el-switch__core::after {
+      background: #4634EE;
+      border: 1px solid #FFFFFF;
+    }
+  }
+  .el-switch {
+    .el-switch__core {
+      border: 1px solid #DDDDDD !important;
+    }
+  }
   .div-control {
 
   }
