--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -46,6 +46,9 @@
     display: flex;
     justify-content: center;
   }
+  .left-margin {
+    margin-right: 10px;
+  }
   .panel-title{
     width: 70px;
     margin-right: 10px;
@@ -75,7 +78,7 @@
 
   .el-tabs__header {
     border-bottom: none !important;
-    padding: 0 25px;
+    padding: 0 10px;
     margin: 0;
     // height: 80px;
   }
@@ -115,7 +118,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     .text-style-col{
-      height: 28px;
+      // height: 28px;
       line-height: 28px;
     }
     .text-style-col{
