【面板】 + 粘性按钮删除

--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -190,18 +190,12 @@
     margin-top: 10px;
     padding: 0px 10px;
   }
+  
   .mt-pro-collapse {
     position: relative;
-    .el-collapse-item:last-child {
-      margin-bottom: 0px !important; // 没有边界线bug
-    }
-    .mt-pro-collapse-out {
-      position: relative;
-      .mt-pro-collapse-stick {
-        position: absolute;
-        right: 15px;
-        top: 14px;
-      }
+    .mt-pro-collapse-tools {
+      position: absolute;
+      right: 10px;
     }
     .el-collapse-item__header {
       display: -webkit-box;
