--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -192,13 +192,14 @@
   }
   
   .mt-pro-collapse {
-    position: relative;
-    .mt-pro-collapse-tools {
-      position: absolute;
-      right: 10px;
-    }
     .el-collapse-item__header {
       display: -webkit-box;
+      position: relative;
+    }
+    .mt-pro-collapse-tools {
+      position: absolute;
+      top: 0px;
+      right: 10px;
     }
     .el-collapse-item__content {
       padding: 0px 10px;
