fix: switch控件样式调整

--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -23,6 +23,8 @@
     }
   }
   .mt-boolean-active {
+    width: 100%;
+    text-align: right;
     .el-switch__core::after {
       background: #4634EE;
       border: 1px solid #FFFFFF;
