【面板】 + 数组监听、透传

--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -117,6 +117,7 @@
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
+    width:100%;
     .text-style-col{
       // height: 28px;
       line-height: 28px;
