--- a/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
@@ -6,6 +6,8 @@
     justify-content: space-between;
     align-items: center;
     font-size: 14px;
+    width: 100%;
+    padding-right: 20px;
     i {
       margin-right: 5px;
     }
