--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -1,4 +1,4 @@
-.mt-pro-panel{
+.mt-pro-panel {
   width: 100%;
   height: 100%;
   .empty_number {
@@ -18,25 +18,26 @@
     }
   }
   .mt-boolean-inactive {
+    width: 100%;
+    text-align: right;
     .el-switch__core::after {
-      background: #EBEBEB;
+      background: #ebebeb;
     }
   }
   .mt-boolean-active {
     width: 100%;
     text-align: right;
     .el-switch__core::after {
-      background: #4634EE;
-      border: 1px solid #FFFFFF;
+      background: #4634ee;
+      border: 1px solid #ffffff;
     }
   }
   .el-switch {
     .el-switch__core {
-      border: 1px solid #DDDDDD !important;
+      border: 1px solid #dddddd !important;
     }
   }
   .div-control {
-
   }
   .flex-center {
     display: flex;
@@ -51,7 +52,7 @@
   .left-margin {
     margin-right: 10px;
   }
-  .panel-title{
+  .panel-title {
     width: 70px;
     margin-right: 10px;
     margin-left: 10px;
@@ -70,11 +71,11 @@
   }
 
   .el-tabs__item.is-active {
-    color: #4634EE;
+    color: #4634ee;
   }
 
   .el-tabs__active-bar {
-    background: linear-gradient(90deg, #6D5EFF, #918EFF);
+    background: linear-gradient(90deg, #6d5eff, #918eff);
     height: 3px;
   }
 
@@ -88,14 +89,14 @@
   .el-tabs__nav-wrap::after {
     background-color: unset;
   }
-  .el-form-item__label{
+  .el-form-item__label {
     font-size: 12px;
     line-height: 30px;
   }
-  .el-form-item__content{
+  .el-form-item__content {
     line-height: 30px;
   }
-  .el-form-item{
+  .el-form-item {
     margin-bottom: 8px;
   }
   .el-tabs__content {
@@ -108,31 +109,31 @@
   .el-tabs__content::-webkit-scrollbar {
     display: none;
   }
-  .el-collapse-item__wrap{
+  .el-collapse-item__wrap {
     overflow-x: auto;
   }
   .none-label .el-form-item__content {
     margin-left: 0;
   }
-  .horizontal-control{
+  .horizontal-control {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
-    width:100%;
-    .text-style-col{
+    width: 100%;
+    .text-style-col {
       // height: 28px;
       line-height: 28px;
     }
-    .text-style-col{
+    .text-style-col {
       margin-right: 4px;
       margin-bottom: 4px;
     }
-    .el-input-number{
+    .el-input-number {
       position: relative;
       top: -1px;
     }
-    .unit-px:after{
+    .unit-px:after {
       position: absolute;
       right: 4px;
       top: 0;
@@ -140,7 +141,7 @@
       color: #666666;
       opacity: 0.5;
     }
-    .unit-percent:after{
+    .unit-percent:after {
       position: absolute;
       right: 4px;
       top: 0;
@@ -148,27 +149,27 @@
       color: #666666;
       opacity: 0.5;
     }
-    .text-style-col .el-input__inner{
-      padding-left:0;
+    .text-style-col .el-input__inner {
+      padding-left: 0;
       padding-right: 0px;
       text-align: left;
       text-indent: 3px;
       height: 26px;
       line-height: 26px;
     }
-    .text-style-col{
-      .el-input-number__decrease{
+    .text-style-col {
+      .el-input-number__decrease {
         width: 12px;
       }
-      .el-input-number__increase{
+      .el-input-number__increase {
         width: 12px;
       }
-      .el-input-number{
+      .el-input-number {
         width: 60px;
       }
-      .el-select{
+      .el-select {
         width: 75px;
-        .el-input__suffix{
+        .el-input__suffix {
           right: -2px;
         }
       }
@@ -180,9 +181,9 @@
       cursor: pointer;
     }
   }
-  .icon-drop{
+  .icon-drop {
     line-height: 22px;
-    padding:2px;
+    padding: 2px;
     min-width: 28px;
     text-align: center;
     box-sizing: border-box;
@@ -193,7 +194,7 @@
     margin-top: 10px;
     padding: 0px 10px;
   }
-  
+
   .mt-pro-collapse {
     .el-collapse-item__header {
       display: -webkit-box;
@@ -220,6 +221,4 @@
       line-height: 26px;
     }
   }
-
-
 }
