--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -221,4 +221,17 @@
       line-height: 26px;
     }
   }
+  .label-min {
+    .el-form-item__label {
+      min-width: 50px;
+    }
+  
+    .el-select {
+      width: 100%;
+    }
+  }
+  .single-con{
+    padding: 0 10px;
+    margin-top: 10px;
+  }
 }
