--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -390,3 +390,12 @@ html,body{
 .box-item-link{
   text-decoration: none !important;
 }
+.label-min {
+  .el-form-item__label {
+    min-width: 50px;
+  }
+
+  .el-select {
+    width: 100%;
+  }
+}
