--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -1,6 +1,12 @@
 .mt-pro-panel {
   width: 100%;
   height: 100%;
+  .number-box {
+    .el-input__inner {
+      padding-left: 10px !important;
+      text-align: left !important;
+    }
+  }
   .empty_number {
     display: flex;
     margin-right: 10px;
