--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -1,3 +1,9 @@
+ // 实现虚线下拉框样式
+.lineSelect {
+  text-overflow: clip !important;
+  width: 70px;
+  padding: 0 5px;
+}
 .mt-pro-panel {
   width: 100%;
   height: 100%;
