--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -4,6 +4,22 @@
   width: 70px;
   padding: 0 5px;
 }
+.select-input-option {
+  .el-input__inner {
+    padding-right: 41px;
+  }
+  .el-input::after {
+    position: absolute;
+    right: 27px;
+    top: 0;
+    content: 'px';
+    color: #666666;
+    opacity: 0.5;
+  }
+  .el-select-dropdown__item::after {
+    content: "px";
+  }
+}
 .mt-pro-panel {
   width: 100%;
   height: 100%;
