--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -169,6 +169,11 @@
       color: #666666;
       opacity: 0.5;
     }
+    .center{
+      input{
+        text-align: center!important;
+      }
+    }
     .unit-percent:after {
       position: absolute;
       right: 4px;
