--- a/src/packages/xxWeb-box/components/editor/assets/css/XscStaticLayout.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/XscStaticLayout.less
@@ -2,7 +2,7 @@
   position: relative;
   width: 500px;
   height: 500px;
-  background: #fff;
+  background: transparent;
   background-size: auto;
   background-repeat: repeat;
   box-sizing: border-box;
