--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -1,28 +1,28 @@
- // 实现虚线下拉框样式
-.lineSelect {
-  text-overflow: clip !important;
-  width: 70px;
-  padding: 0 5px;
-}
-.select-input-option {
-  .el-input__inner {
-    padding-right: 41px;
-  }
-  .el-input::after {
-    position: absolute;
-    right: 27px;
-    top: 0;
-    content: 'px';
-    color: #666666;
-    opacity: 0.5;
-  }
-  .el-select-dropdown__item::after {
-    // content: "px";
-  }
-}
 .mt-pro-panel {
   width: 100%;
   height: 100%;
+  // 实现虚线下拉框样式
+  .lineSelect {
+    text-overflow: clip !important;
+    width: 70px;
+    padding: 0 5px;
+  }
+  .select-input-option {
+    .el-input__inner {
+      padding-right: 41px;
+    }
+    .el-input::after {
+      position: absolute;
+      right: 27px;
+      top: 0;
+      content: 'px';
+      color: #666666;
+      opacity: 0.5;
+    }
+    .el-select-dropdown__item::after {
+      content: "px";
+    }
+  }
   .number-box {
     .el-input__inner {
       padding-left: 10px !important;
@@ -266,5 +266,13 @@
   .single-con{
     padding: 0 10px;
     margin-top: 10px;
+  }
+  .el-collapse-item.is-disabled{
+    .el-collapse-item__header{
+      cursor: default;
+    }
+    .el-collapse-item__arrow{
+      visibility: hidden;
+    }
   }
 }
