--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -390,9 +390,10 @@ html,body{
 .box-item-link{
   text-decoration: none !important;
 }
-.label-min {
+.label-min, .mt-pro-div {
   .el-form-item__label {
     min-width: 50px;
+    padding: 0;
   }
 
   .el-select {
