--- a/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
@@ -49,4 +49,12 @@
   .el-tree__drop-indicator {
     background-color: #4634EE;
   }
+  .node-title{
+    font-weight: 300;
+    color: #333;
+  }
+  .node-parent-title{
+    font-weight: 400;
+    color: #333;
+  }
 }
