fix: 修改配置面板中 unit-px 属性的行高样式

--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -12,6 +12,7 @@
       content: 'px';
       color: #666666;
       opacity: 0.5;
+      line-height: 26px;
     }
     .el-select-dropdown__item::after {
       content: 'px';
