--- a/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
@@ -27,7 +27,7 @@
     color: #333333
   }
   .node-title{
-    display: inline-block;
+    display: inline-flex;
     font-weight: 300;
     color: #333;
   }
