--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -118,7 +118,7 @@
     line-height: 30px;
   }
   .el-form-item__content {
-    line-height: 28px;
+    line-height: initial;
   }
   .el-form-item {
     margin-bottom: 8px;
