--- a/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
@@ -58,7 +58,7 @@
       }
     }
   }
-  .el-tree--highlight-current .el-tree-node.is-expanded>.el-tree-node__content,
+  //.el-tree--highlight-current .el-tree-node.is-expanded>.el-tree-node__content,
   .el-tree--highlight-current .el-tree-node.is-current>.el-tree-node__content {
     background: #F7F8FB;
   }
