--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -129,6 +129,7 @@
     overflow-y: auto;
     scrollbar-width: none;
     -ms-overflow-style: none;
+    border-top: 1px solid #ddd;
   }
   .el-tabs__content::-webkit-scrollbar {
     display: none;
