--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -1,5 +1,5 @@
 .mtScale[theme='light']{
-  --background-color:#e9e9eb;
+  --background:transparent;
   --link-color:#409EFF;
   --border-color:#DCDFE6;
   --tool-bg:#fff;
@@ -13,7 +13,7 @@
   --rule-border-color:#818181;
 }
 .mtScale[theme='dark']{
-  --background-color:#202835;
+  --background:transparent;
   --link-color:#409EFF;
   --border-color:#181f29;
   --tool-bg:#202735;
@@ -153,4 +153,8 @@
   .scena-guides-display-drag {
     color: #0686D7 !important;
   }
+}
+
+.mtScale .mtScale-control-item .el-dropdown-link {
+  color: #6D5EFF;
 }
