--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -92,7 +92,9 @@
     box-shadow: 0 -2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
     border-top: 1px solid var(--border-color);
     background-color: var(--tool-bg);
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   .mtScale-control-item{
     display: inline-block;
