--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -78,10 +78,10 @@
     display: inline-block;
   }
   .mtScale-has-ruler{
-    width: calc(100% - 31px);
-    height: calc(100% - 31px);
-    margin-left: 31px;
-    margin-top: 31px;
+    width: calc(100% - 24px);
+    height: calc(100% - 24px);
+    margin-left: 24px;
+    margin-top: 24px;
   }
   .mtScale-control{
     box-sizing: border-box;
@@ -107,6 +107,7 @@
     background: var(--ruler-empty-bg);
     width: 24px;
     height: 24px;
+    position: absolute;
   }
   .ruler-container-top,.ruler-container-right{
     box-sizing: content-box;
