--- a/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtView.less
@@ -163,6 +163,11 @@
   .scena-guides-display-drag {
     color: #0686D7 !important;
   }
+  .navigate-con{
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .mtScale .mtScale-control-item .el-dropdown-link {
