--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -130,6 +130,10 @@
     scrollbar-width: none;
     -ms-overflow-style: none;
     border-top: 1px solid #ddd;
+    .el-tab-pane {
+      height: calc(100% - 50px);
+      min-height: 200px;
+    }
   }
   .el-collapse-item__wrap {
     overflow-x: auto;
