--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -133,6 +133,10 @@
     .el-tab-pane {
       height: calc(100% - 50px);
       min-height: 200px;
+      .el-collapse {
+        border-top: 0 solid #EBEEF5;
+        border-bottom: 0 solid #EBEEF5;
+      }
     }
   }
   .el-collapse-item__wrap {
