--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -216,6 +216,11 @@
           right: -2px;
         }
       }
+      .pro-panel-select {
+        .el-input__inner {
+          padding-right: 25px;
+        }
+      }
     }
   }
   .array-control {
