--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -289,6 +289,11 @@
       visibility: hidden;
     }
   }
+  .none-label-sub{
+    position: relative;
+    top: -5px;
+    left: -3px;
+  }
 }
 // 实现虚线下拉框样式
 .lineSelect {
