--- a/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtProPanel.less
@@ -160,6 +160,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     width: 100%;
+    grid-gap: 10px 0;
     .text-style-col {
       // height: 28px;
       line-height: 28px;
