--- a/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
+++ b/src/packages/xxWeb-box/components/editor/assets/css/mtUiList.less
@@ -1,7 +1,7 @@
 .mt-ui-list {
   position:relative;
   .custom-tree-node {
-    width: 190px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -16,6 +16,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-start;
+      height: 100%;
     }
   }
   .el-tree-node__content{
