--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -232,13 +232,15 @@ html,body{
     .logo img{
       height: 24px;
     }
+    .logo>img+.title{
+      margin-left: 15px;
+    }
     .title{
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
       font-size: 18px;
       margin: 0;
-      margin-left: 15px;
     }
     .title-enter,.title-leave-to{
       opacity: 0;
