--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -130,6 +130,9 @@ html,body{
         overflow: hidden;
         white-space: nowrap
       }
+      .avatar-warp{
+        position: relative;
+      }
       .avatar-img{
         background-color: #fff
       }
@@ -232,15 +235,13 @@ html,body{
     .logo img{
       height: 24px;
     }
-    .logo>img+.title{
-      margin-left: 15px;
-    }
     .title{
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
       font-size: 18px;
       margin: 0;
+      margin-left: 15px;
     }
     .title-enter,.title-leave-to{
       opacity: 0;
