--- a/src/packages/xxWeb-box/assets/css/index.less
+++ b/src/packages/xxWeb-box/assets/css/index.less
@@ -285,6 +285,11 @@ html,body{
         }
         .el-tabs__item{
           user-select: none;
+          .tab-item-title{
+            display: inline-flex;
+            align-items: center;
+            grid-gap: 4px;
+          }
         }
       }
       .el-tabs__content{
